fixed crash problem

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ Enjoy
             <table id="table1">
                 <caption><strong><em>Our Products for Sale</em></strong></caption>
                 <tr>
-                    <th onclick="sortTable1(0)">Brands</th>
-                    <th onclick="sortTable1(1)">Model</th>
-                    <th onclick="sortTable1(2)">
+                    <th onclick="sortTable1(0)" ; this.onclick=null;>Brands</th>
+                    <th onclick="sortTable1(1)" ; this.onclick=null;>Model</th>
+                    <th onclick="sortTable1(2)" ; this.onclick=null;>
                         <abbr title="Operating System">OS</abbr>
                     </th>
                     <th>Image</th>
-                    <th onclick="sortTable1(4)">Screen size (inch)</th>
+                    <th onclick="sortTable1(4)" ; this.onclick=null;>Screen size (inch)</th>
                 </tr>
                 <tr>
                     <td>Apple</td>
@@ -127,10 +127,10 @@ Enjoy
         <table id="table2">
             <caption><strong><em>More info on our products</em></strong></caption>
             <tr>
-                <th onclick="sortTable2(0)">Model</th>
-                <th onclick="sortTable2(1)">Storage in GB</th>
-                <th onclick="sortTable2(2)">Camera Quality</th>
-                <th onclick="sortTable2(3)">Price in &#8364;</th>
+                <th onclick="sortTable2(0)" ; this.onclick=null;>Model</th>
+                <th onclick="sortTable2(1)" ; this.onclick=null;>Storage in GB</th>
+                <th onclick="sortTable2(2)" ; this.onclick=null;>Camera Quality</th>
+                <th onclick="sortTable2(3)" ; this.onclick=null;>Price in &#8364;</th>
             </tr>
             <tr>
                 <td>iPhone 11 Pro</td>
@@ -139,7 +139,7 @@ Enjoy
                 <td>905</td>
             </tr>
             <tr>
-                <td></td>Galaxy S10</td>
+                <td>Galaxy S10</td>
                 <td>128</td>
                 <td>16-megapixel</td>
                 <td>635</td>
