--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ Enjoy
                 </tr>
             </table>
             <button id='reset' type="button">reset</button>
+            <button id='insert' type="button">insert</button>
         </form>
     </section>
 
